fix background images

--- a/style/sass/Modules/header.scss
+++ b/style/sass/Modules/header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-image: linear-gradient(#ffef0f41, #ffef0f41), url(../../../images/pexels-mentatdgt-1336873.jpg);
+    background-image: linear-gradient(#ffef0f41, #ffef0f41), url(./../images/pexels-mentatdgt-1336873.jpg);
     height: 100vh;
     background-attachment: fixed;
 
