--- a/style/sass/Modules/products.scss
+++ b/style/sass/Modules/products.scss
@@ -1,6 +1,6 @@
 .products{
     padding: 8rem 2rem;
-    background-image: linear-gradient(#00000085, #00000098), url(../../../images/pexels-mica-asato-1082528.jpg);
+    background-image: linear-gradient(#00000085, #00000098), url(./../images/pexels-mica-asato-1082528.jpg);
     background-attachment: fixed;
 
     &__content{
