--- a/style/sass/Modules/_mixin.scss
+++ b/style/sass/Modules/_mixin.scss
@@ -3,3 +3,15 @@
         @content;
     }
 }
+
+@mixin tablet {
+    @media only screen and(max-width: 1260px){
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media only screen and(max-width: 1260px){
+        @content;
+    }
+}
