--- a/style/sass/Modules/history.scss
+++ b/style/sass/Modules/history.scss
@@ -8,7 +8,7 @@
 
     &__img--container{
         width: 50%;
-        background-image: url(./../../../images/pexels-mentatdgt-1336873.jpg);
+        background-image: url(./../images/pexels-mentatdgt-1336873.jpg);
         background-attachment: fixed;
         margin-right: 2rem;        
         clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
