--- a/style/style.css
+++ b/style/style.css
@@ -64,7 +64,7 @@ body {
   color: #000000; }
 
 .header {
-  background-image: linear-gradient(#ffef0f41, #ffef0f41), url(../../../images/pexels-mentatdgt-1336873.jpg);
+  background-image: linear-gradient(#ffef0f41, #ffef0f41), url(./../images/pexels-mentatdgt-1336873.jpg);
   height: 100vh;
   background-attachment: fixed; }
   .header__hero-content {
@@ -216,7 +216,7 @@ body {
     display: flex; }
   .history__img--container {
     width: 50%;
-    background-image: url(./../../../images/pexels-mentatdgt-1336873.jpg);
+    background-image: url(./../images/pexels-mentatdgt-1336873.jpg);
     background-attachment: fixed;
     margin-right: 2rem;
     clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%); }
@@ -279,7 +279,7 @@ body {
 
 .products {
   padding: 8rem 2rem;
-  background-image: linear-gradient(#00000085, #00000098), url(../../../images/pexels-mica-asato-1082528.jpg);
+  background-image: linear-gradient(#00000085, #00000098), url(./../images/pexels-mica-asato-1082528.jpg);
   background-attachment: fixed; }
   .products__content {
     display: flex;
